# Crimson

./: .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Crimson  CrimsonIcon.h  LICENSE  Makefile  README.md  SDL2ConfigVersion.cmake  build.sh  cmake_install.cmake  compile_commands.json  imgui.ini  premake5.lua  run.sh
.ccls-cache/@@home@george@Documents@Crimson/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@9@backward@binders.h.blob  @usr@include@c++@9@bits@alloc_traits.h.blob  @usr@include@c++@9@bits@allocator.h.blob  @usr@include@c++@9@bits@basic_ios.h.blob  @usr@include@c++@9@bits@basic_ios.tcc.blob  @usr@include@c++@9@bits@basic_string.h.blob  @usr@include@c++@9@bits@basic_string.tcc.blob  @usr@include@c++@9@bits@char_traits.h.blob  @usr@include@c++@9@bits@concept_check.h.blob  @usr@include@c++@9@bits@cpp_type_traits.h.blob  @usr@include@c++@9@bits@cxxabi_forced.h.blob  @usr@include@c++@9@bits@cxxabi_init_exception.h.blob  @usr@include@c++@9@bits@exception.h.blob  @usr@include@c++@9@bits@exception_defines.h.blob  @usr@include@c++@9@bits@exception_ptr.h.blob  @usr@include@c++@9@bits@functexcept.h.blob  @usr@include@c++@9@bits@functional_hash.h.blob  @usr@include@c++@9@bits@hash_bytes.h.blob  @usr@include@c++@9@bits@ios_base.h.blob  @usr@include@c++@9@bits@istream.tcc.blob  @usr@include@c++@9@bits@locale_classes.h.blob  @usr@include@c++@9@bits@locale_classes.tcc.blob  @usr@include@c++@9@bits@locale_facets.h.blob  @usr@include@c++@9@bits@locale_facets.tcc.blob  @usr@include@c++@9@bits@localefwd.h.blob  @usr@include@c++@9@bits@memoryfwd.h.blob  @usr@include@c++@9@bits@move.h.blob  @usr@include@c++@9@bits@nested_exception.h.blob  @usr@include@c++@9@bits@ostream.tcc.blob  @usr@include@c++@9@bits@ostream_insert.h.blob  @usr@include@c++@9@bits@postypes.h.blob  @usr@include@c++@9@bits@predefined_ops.h.blob  @usr@include@c++@9@bits@ptr_traits.h.blob  @usr@include@c++@9@bits@range_access.h.blob  @usr@include@c++@9@bits@std_abs.h.blob  @usr@include@c++@9@bits@stl_algobase.h.blob  @usr@include@c++@9@bits@stl_function.h.blob  (+131 more)
.ccls-cache/@home@george@Documents@Crimson/: Crimson@Source@Print.cpp.blob  Crimson@Source@Print.h.blob  Game@Source@Game.cpp.blob
Crimson/: Application.cpp  Application.h  Crimson.h  ECS.h  SLECS.cpp  SLECS.h  premake5.lua
Crimson/ComponentSystems/: CameraSystems.h  GraphicsSystems.cpp  GraphicsSystems.h  PrefabSystems.h  ScriptSystems.h  Transform.h
Crimson/Graphics/: Camera.h  Cubemap.cpp  Cubemap.h  Display.cpp  Display.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Crimson/Input/: Keyboard.h
Crimson/Math/: Math.h  Matrix4.h  Vector3.h  Vector4.h
Crimson/SceneManagement/: SceneManager.cpp  SceneManager.h  SceneSettings.h
Crimson/Script/: Jinx.hpp  ScriptWrapper.cpp  ScriptWrapper.h
Crimson/Scripting/: ScriptComponent.h  ScriptStandardFunctions.cpp  ScriptStandardFunctions.h  ScriptWrapper.cpp  ScriptWrapper.h
Crimson/Source/: AssetManager.cpp  AssetManager.h  Crimson.h  CrimsonIcon.h  GUID.cpp  GUID.h  Game.cpp  Game.h  Input.cpp  Input.h  Layer.cpp  Layer.h  Logger.cpp  Logger.h  Print.cpp  Print.h  Transform.h
Crimson/Utils/: FileUtils.h  WorkingDir.h
Editor/: Application.cpp  GUI.cpp  GUI.h  NewScene.cscn  premake5.lua
Editor/Data/: GreenMaterial.mat  InputConfig.conf  NewScene.cscn  ProjectConfig.conf  Test.cscn
Editor/Source/: Editor.cpp  Editor.h  EditorLayer.cpp  EditorLayer.h  SceneCamera.h  TextEditor.cpp  UIUtils.cpp  UIUtils.h
Engine/: Crimson.h
Engine/Graphics/: Display.cpp
Game/: Data.pck  Game.depend  data.pck  premake5.lua
Game/Data/: Cube.dae  CubeMesh.mesh  GreenMaterial.mat  MonkeyMaterial.lua  MonkeyMaterial.mat  MonkeyScript.as  Standard.glsl  (+1 more)
ProjectManager/: Application.cpp
Resources/: Basic.frag  Basic.vert  BasicLit.frag  BasicUnlit.frag  Lights.glsl  SLECS.h  Shiny.txt  TestMap.txt  TestScene.scene
Runtime/: Application.cpp
Sandbox/: Application.cpp
Source/: Application.cpp
crimson/: premake5.lua
docs/: CNAME  index.html  main.js  master.css
editor/: premake5.lua
media/: logo.xcf
sandbox/: log.txt  premake5.lua
(+295 files in other folders)
